CICGOV-123 refactor